--- a/src/app/workspace/screen/tabs.less
+++ b/src/app/workspace/screen/tabs.less
@@ -238,14 +238,7 @@
 
     .screen-tabs-container-inner {
         overflow-x: scroll;
-        &::-webkit-scrollbar-thumb,
-        &::-webkit-scrollbar-track {
-            display: none;
-        }
-
-        &:hover::-webkit-scrollbar-thumb {
-            display: block;
-        }
+        
     }
 
     .screen-tabs {
